# asteroids-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  index.scss  prek.toml
.github/actions/setup-toolchain/: action.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  fuzz.yml  lint.yml  pr.yml
hooks/ci/: check_warnings.sh
hooks/trunk/: post_build.sh
src/: asteroid.rs  canvas.rs  collisions.rs  common.rs  debris.rs  engine.rs  ferris.rs  main.rs  math.rs  ship.rs  shot.rs  ufo.rs
