[package]
name = "asteroids-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
gloo = "0.11.0"
itertools = "0.14.0"
rand = "0.10.0"
web-sys = "0.3.91"
yew = { version = "0.22.1", features = ["csr"] }

[dev-dependencies]
cargo-llvm-cov = "0.8.4"
is-svg = "0.2.2"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
